# GenAI-Red-Team-Lab

./: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: 1-backlog-entry.yml
exploitation/: README.md
exploitation/AdversarialGenerator/: Makefile  README.md  attack.py  pyproject.toml
exploitation/AdverserialGenerator/: LICENSE  README.md  attack.py  main.py  pyproject.toml  requirements.txt
exploitation/InvokeAI_v5.3.0/: Makefile  README.md  exploit.py  generate_payload.py
exploitation/LangGrinch/: Makefile  README.md  attack.py
exploitation/Langflow_v1.0.12/: Makefile  README.md  exploit.py
exploitation/LocalAI_v2.17.1/: Makefile  README.md  exploit.py
exploitation/Ni8mare/: .gitignore  Makefile  README.md  attack.py  config.toml  pyproject.toml  setup_target.py
exploitation/agent0/: Makefile  README.md  run_agent.py
exploitation/example/: README.md  attack.py
exploitation/garak/: Makefile  README.md  attack.py  pyproject.toml
exploitation/n8n_RCE_via_file_write/: Makefile  README.md  attack.py  config.toml  pyproject.toml
exploitation/promptfoo/: Makefile  README.md  package-lock.json  package.json  promptfooconfig.js  promptfooconfig.yaml
sandboxes/: README.md
sandboxes/agentic_local_n8n_v1.120.0/: Containerfile  Makefile  README.md  config.toml  main.py  pyproject.toml  seed_user.py
sandboxes/agentic_local_n8n_v1.65.0/: .gitignore  Containerfile  Makefile  README.md  config.toml  main.py  pyproject.toml  seed_user.py
tutorials/: README.md  community_resources.md  llm_chatbot_system_prompt_exfiltration.md  tools.md
(+48 files in other folders)
